[tool.poetry]
name = "app-htmlgraph"
version = "0.1.0"
description = "Representing textual data from html pages as a tree"
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
anytree = "^2.12.1"
typer = "^0.9.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
